# SludgeDX12

./: CMakeLists.txt  LICENSE  README.md
entry/: main.cpp
src/: errors.h  pch.h
src/core/: DirectXClasses.cpp  DirectXClasses.h  IContext.cpp  IContext.h  d3dApp.cpp  d3dApp.h
src/ldx/: CommandManager.cpp  CommandManager.h  ConstantBuffer.h  CubeMap.cpp  CubeMap.h  DepthStencilBuffer.cpp  DepthStencilBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  ImGuiRenderer.cpp  ImGuiRenderer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Model.cpp  Model.h  RenderTarget.cpp  RenderTarget.h  Scene.h  StructuredBuffer.cpp  StructuredBuffer.h  Texture.cpp  Texture.h  TextureUAV.cpp  TextureUAV.h  UploadBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/shaders/Compute/: Equirect2cube.cs.hlsl  IntegrateBRDF.cs.hlsl  IrradianceConvolve.cs.hlsl  PrefilteredEnv.cs.hlsl
src/shaders/Offscreen/: OSPixel.ps.hlsl  OSVertex.vs.hlsl
src/shaders/PBR/: PixelShader.ps.hlsl  SkyBoxPS.ps.hlsl  SkyBoxVS.vs.hlsl  VertexShader.vs.hlsl
src/shaders/Utils/: BindlessRS.hlsl  LightingUtils.hlsl  Utils.hlsl
src/shaders/cso/: irradianceCompute.cso  lutCompute.cso  osPS.cso  osVS.cso  prefilterCompute.cso  ps.cso  sbPS.cso  sbVS.cso  skyboxCompute.cso  vs.cso
src/utils/: Camera.cpp  Camera.h  Handle.h  Holder.cpp  Holder.h  ModelData.h  Pool.h  SceneUtils.h  Timer.cpp  Timer.h  tiny_gltf.h  utils.h
